[tool.poetry]
name = "HelloWorld"
version = "1"
description = "Introuctory hello worl project"
authors = ["Akidoo"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
